--- a/Alzheimer's Disease.ipynb
+++ b/Alzheimer's Disease.ipynb
@@ -1,8 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alzheimer's Disease Starter Code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, roc_auc_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,27 +70,7 @@
       "dtypes: float64(12), int64(22), object(1)\n",
       "memory usage: 587.7+ KB\n"
      ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Load the data\n",
-    "file_path = \"Resources/alzheimers_disease_data.csv\"\n",
-    "alzheimers_db = pd.read_csv(file_path)\n",
-    "\n",
-    "# Display basic information about the DataFrame\n",
-    "alzheimers_db.info()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -282,22 +280,22 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load the data\n",
+    "file_path = \"Resources/alzheimers_disease_data.csv\"\n",
+    "alzheimers_db = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display basic information about the DataFrame\n",
+    "alzheimers_db.info()\n",
+    "\n",
     "# Display the first few rows of the DataFrame\n",
     "alzheimers_db.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
