--- a/Alzheimer's Disease.ipynb
+++ b/Alzheimer's Disease.ipynb
@@ -586,7 +586,7 @@
     "best_score_dt = grid_search_dt.best_score_\n",
     "\n",
     "# Save results to a CSV file\n",
-    "with open('model_optimization_log.csv', mode='w', newline='') as file:\n",
+    "with open('Resources/model_optimization_log.csv', mode='w', newline='') as file:\n",
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"Iteration\", \"Model\", \"Parameters\", \"Accuracy\"])\n",
     "    for i, (params, mean_score) in enumerate(zip(grid_search_rf.cv_results_['params'], grid_search_rf.cv_results_['mean_test_score'])):\n",
