--- a/Alzheimer's Disease.ipynb
+++ b/Alzheimer's Disease.ipynb
@@ -516,7 +516,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 108 candidates, totalling 540 fits\n"
+      "Fitting 5 folds for each of 108 candidates, totalling 540 fits\n",
+      "Best parameters for Random Forest:  {'max_depth': 20, 'min_samples_leaf': 1, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "Best cross-validation accuracy for Random Forest:  0.9318452133064584\n",
+      "Optimized Random Forest Accuracy: 0.9519230769230769\n",
+      "Optimized Random Forest Confusion Matrix:\n",
+      " [[283   5]\n",
+      " [ 15 113]]\n",
+      "Optimized Random Forest Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.95      0.98      0.97       288\n",
+      "         1.0       0.96      0.88      0.92       128\n",
+      "\n",
+      "    accuracy                           0.95       416\n",
+      "   macro avg       0.95      0.93      0.94       416\n",
+      "weighted avg       0.95      0.95      0.95       416\n",
+      "\n"
      ]
     }
    ],
@@ -694,21 +710,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'GridSearchCV' object has no attribute 'cv_results_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[66], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m writer \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mwriter(file)\n\u001b[0;32m      6\u001b[0m writer\u001b[38;5;241m.\u001b[39mwriterow([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIteration\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mParameters\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, (params, mean_score) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[43mgrid_search_rf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcv_results_\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m'\u001b[39m], grid_search_rf\u001b[38;5;241m.\u001b[39mcv_results_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean_test_score\u001b[39m\u001b[38;5;124m'\u001b[39m])):\n\u001b[0;32m      8\u001b[0m     writer\u001b[38;5;241m.\u001b[39mwriterow([i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRandom Forest\u001b[39m\u001b[38;5;124m\"\u001b[39m, params, mean_score])\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, (params, mean_score) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mzip\u001b[39m(grid_search_dt\u001b[38;5;241m.\u001b[39mcv_results_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m'\u001b[39m], grid_search_dt\u001b[38;5;241m.\u001b[39mcv_results_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean_test_score\u001b[39m\u001b[38;5;124m'\u001b[39m])):\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'cv_results_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
