--- a/Alzheimer's Disease.ipynb
+++ b/Alzheimer's Disease.ipynb
@@ -1847,7 +1847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Box plots for continuous variables (Hold)"
+    "## Box plots for continuous variables"
    ]
   },
   {
