--- a/Alzheimer's Disease.ipynb
+++ b/Alzheimer's Disease.ipynb
@@ -3215,6 +3215,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ending Analysis\n",
+    "Overall the two models that outperformed all of the other models were CatBoost and Gradient Boosting in accuracy. However because we had a smaller dataset (2419 rows), the difference between the two in accuracy was negligible and could be due to variance. When trying to decide between Cat Boost and Gradient Boosting we looked at several factors, however one remained more important than the others and that was Recall. Because Recall takes into account False Negatives, we wanted to see that this was taken into account in our decision. Avoiding false negatives for a model looking to predict something as important as Alzheimer’s disease is imperative. Recall for Cat Boost (with all features) was lower than for Gradient Boosting (with all features), so we decided that Gradient Boosting would be the ideal predictive model to predict Alzheimer’s from these features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
